ajustes para VM
